--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -3,6 +3,6 @@ server:
 
 spring:
   datasource:
-    password: dat2003z
+    password: root
     url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
