--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -11,5 +11,7 @@ spring:
     password: dat2003z
     url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
-
-
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
