--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 spring:
   datasource:
     password: 12345678
-    url: "jdbc:mysql://localhost:3306/pethealthcare"
+    url: "jdbc:mysql://localhost:3306/pethealthcareV2"
     username: root
 
 
