--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -8,8 +8,10 @@ server:
 
 spring:
   datasource:
-    password: root
     url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
-
-
+    password: root
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
