--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -8,8 +8,8 @@ server:
 
 spring:
   datasource:
-    password: root
-    url: "jdbc:mysql://localhost:3306/pethealthcare"
+    password: ${JDBC_DATABASE_PASSWORD}
+    url: "jdbc:mysql://localhost:3306/pethealthcarev2"
     username: root
   jpa:
     hibernate:
