--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -8,8 +8,8 @@ server:
 
 spring:
   datasource:
-    password: 12345678
-    url: "jdbc:mysql://localhost:3306/pethealthcarev2"
+    password: 123456
+    url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
   jpa:
     hibernate:
