--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -15,3 +15,14 @@ spring:
     hibernate:
       ddl-auto: create-drop
     show-sql: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: "dathtvse170567@fpt.edu.vn"
+    password: "aran vhqy rblp xvka"
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
