--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 
 spring:
   datasource:
-    password: ${JDBC_DATABASE_PASSWORD}
+    password: 12345678
     url: "jdbc:mysql://localhost:3306/pethealthcarev2"
     username: root
   jpa:
