--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -8,10 +8,9 @@ server:
 
 spring:
   datasource:
-    password: 123456
     url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
-    password: root
+    password: dat2003z
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -27,5 +26,3 @@ spring:
           auth: true
           starttls:
             enable: true
-      ddl-auto: update
-    show-sql: true
