--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -8,12 +8,12 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/pethealthcarev2"
+    url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
     password: dat2003z
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
   mail:
     host: smtp.gmail.com
