--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
-    password: dat2003z
+    password: 123456
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
   mail:
     host: smtp.gmail.com
