--- a/pethealthcaresystem-frontend/package.json
+++ b/pethealthcaresystem-frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
