--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -8,9 +8,9 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/pethealthcare"
+    url: "jdbc:mysql://localhost:3306/pethealthcarev2"
     username: root
-    password: root
+    password: 12345678
   jpa:
     hibernate:
       ddl-auto: update
