--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/pethealthcarev2"
     username: root
-    password: root
+    password: 12345678
   jpa:
     hibernate:
       ddl-auto: update
