--- a/pethealthcaresystem-frontend/package.json
+++ b/pethealthcaresystem-frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
