--- a/pethealthcaresystem-frontend/package.json
+++ b/pethealthcaresystem-frontend/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.12.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.2.10",
+    "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
