--- a/pethealthcaresystem-frontend/package.json
+++ b/pethealthcaresystem-frontend/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.2.10",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
