--- a/pethealthcaresystem-frontend/package.json
+++ b/pethealthcaresystem-frontend/package.json
@@ -15,9 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "font-awesome": "^4.7.0",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.2.11",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
