--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
-    password: dat2003z
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: update
@@ -26,3 +26,7 @@ spring:
           auth: true
           starttls:
             enable: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
