edit paymentrs.js reservation.js bookinghistory.js

--- a/pethealthcaresystem-frontend/package.json
+++ b/pethealthcaresystem-frontend/package.json
@@ -8,6 +8,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,6 +21,7 @@
     "firebase": "^10.12.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.2.11",
+    "jspdf": "^2.5.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
