--- a/pethealthcaresystem-frontend/package.json
+++ b/pethealthcaresystem-frontend/package.json
@@ -22,6 +22,7 @@
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.2.11",
     "jspdf": "^2.5.1",
+    "moment": "^2.30.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
