--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -10,11 +10,11 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
-    password: dat2003z
+    password: 12345678
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
   mail:
     host: smtp.gmail.com
     port: 587
