--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -9,9 +9,9 @@ server:
         secure: true
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/pethealthcarev2"
+    url: "jdbc:mysql://localhost:3306/pethealthcare"
     username: root
-    password: root
+    password: dat2003z
 #spring:
 #  datasource:
 #    url: jdbc:mysql://mysqlazuredb.mysql.database.azure.com:3306/pethealthcare?useSSL=true
@@ -37,3 +37,6 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+
+custom:
+  url: "http://localhost:3000"
