--- a/pethealthcaresystem-backend/src/main/resources/application.yml
+++ b/pethealthcaresystem-backend/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/pethealthcarev2"
     username: root
-    password: root
+    password: 12345678
 #spring:
 #  datasource:
 #    url: jdbc:mysql://mysqlazuredb.mysql.database.azure.com:3306/pethealthcare?useSSL=true
